version/0.9/_sources/examples/gallery_examples/03-exporting/export_fea_model.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\03-exporting\export_fea_model.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_03-exporting_export_fea_model.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_03-exporting_export_fea_model.py:


.. _ref_sherlock_export_fea_model:

================
Export FEA Model
================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and export a Finite Element Analysis (FEA) model.

Description
Sherlock's gRPC API enables automation of various workflows, including exporting FEA models.
This script demonstrates how to:
- Connect to the Sherlock service.
- Import a tutorial project.
- Export an FEA model with specific parameters.

.. GENERATED FROM PYTHON SOURCE LINES 36-49

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path, get_temp_dir

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockExportFEAModelError,
        SherlockImportProjectZipArchiveError,
    )
    from ansys.sherlock.core.types.common_types import Measurement


.. GENERATED FROM PYTHON SOURCE LINES 51-54

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 54-57

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)


.. GENERATED FROM PYTHON SOURCE LINES 58-61

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 61-68

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 69-72

Import Tutorial Project
=======================
Import the tutorial project zip archive provided with the Sherlock installation.

.. GENERATED FROM PYTHON SOURCE LINES 72-83

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Tutorial Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 84-87

Export FEA Model
================
Export the FEA model with customized parameters.

.. GENERATED FROM PYTHON SOURCE LINES 87-121

.. code-block:: Python


    try:
        fea_export_path = os.path.join(get_temp_dir(), "export.wbjn")
        sherlock.model.export_FEA_model(
            project="Test",
            cca_name="Main Board",
            export_file=fea_export_path,
            analysis="NaturalFreq",
            drill_hole_parameters=[
                {
                    "drill_hole_modeling": "ENABLED",
                    "min_hole_diameter": Measurement(value=1.0, unit="mm"),
                    "max_edge_length": Measurement(value=1.0, unit="mm"),
                }
            ],
            detect_lead_modeling="ENABLED",
            lead_model_parameters=[
                {
                    "lead_modeling": "ENABLED",
                    "lead_element_order": "First Order (Linear)",
                    "max_mesh_size": Measurement(value=1.0, unit="mm"),
                    "vertical_mesh_size": Measurement(value=0.5, unit="mm"),
                    "thicknessCount": 3,
                    "aspectRatio": 2,
                }
            ],
            display_model=False,
            clear_FEA_database=True,
            use_FEA_model_id=True,
            coordinate_units="mm",
        )
        print(f"FEA model exported successfully to: {fea_export_path}")
    except SherlockExportFEAModelError as e:
        print(f"Error exporting FEA model: {e}")


.. _sphx_glr_download_examples_gallery_examples_03-exporting_export_fea_model.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: export_fea_model.ipynb <export_fea_model.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: export_fea_model.py <export_fea_model.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: export_fea_model.zip <export_fea_model.zip>`
